Fix collapsing of chat header

--- a/scss/app/components/_chat.scss
+++ b/scss/app/components/_chat.scss
@@ -1,4 +1,8 @@
 .chat {
   display: flex;
   flex-direction: column;
+
+  header {
+    flex-shrink: 0;
+  }
 }
